components/manifests/overlays/local-dev/frontend-route.yaml
# Route for local dev frontend
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
